Smallest routing table ever.

--- a/gfw.conf
+++ b/gfw.conf
@@ -42,6 +42,8 @@ server=/aboluowang.com/8.8.8.8
 server=/aboutgfw.com/8.8.8.8
 server=/aboutus.org/8.8.8.8
 server=/ac.jiruan.net/8.8.8.8
+server=/ad1.nownews.com/8.8.8.8
+server=/ads.backchina.com/8.8.8.8
 server=/adult168.com/8.8.8.8
 server=/adultfriendfinder.com/8.8.8.8
 server=/aisex.com/8.8.8.8
@@ -151,6 +153,8 @@ server=/blogs.yahoo.co.jp/8.8.8.8
 server=/blogspot.com/8.8.8.8
 server=/blogtd.net/8.8.8.8
 server=/blogtd.org/8.8.8.8
+server=/bloomberg.cn/8.8.8.8
+server=/bloomberg.com/8.8.8.8
 server=/boardreader.com/8.8.8.8
 server=/bolin.netfirms.com/8.8.8.8
 server=/boltbrowser.com/8.8.8.8
@@ -169,6 +173,7 @@ server=/bugbeep.com/8.8.8.8
 server=/bullog.org/8.8.8.8
 server=/bullogger.com/8.8.8.8
 server=/businesstimes.com.cn/8.8.8.8
+server=/businessweek.com/8.8.8.8
 server=/buy.yahoo.com.tw/8.8.8.8
 server=/buzzurl.jp/8.8.8.8
 server=/c-spanvideo.org/8.8.8.8
@@ -242,6 +247,7 @@ server=/civicparty.hk/8.8.8.8
 server=/civilhrfront.org/8.8.8.8
 server=/ck101.com/8.8.8.8
 server=/cl.d0z.net/8.8.8.8
+server=/club.backchina.com/8.8.8.8
 server=/cmule.com/8.8.8.8
 server=/cn.calameo.com/8.8.8.8
 server=/cn.dayabook.com/8.8.8.8
@@ -323,6 +329,7 @@ server=/dupola.com/8.8.8.8
 server=/dupola.net/8.8.8.8
 server=/dw-world.com/8.8.8.8
 server=/dw-world.de/8.8.8.8
+server=/dw.de/8.8.8.8
 server=/dwnews.com/8.8.8.8
 server=/dy24k.info/8.8.8.8
 server=/dzze.com/8.8.8.8
@@ -360,6 +367,7 @@ server=/fangbinxing.com/8.8.8.8
 server=/fangeming.com/8.8.8.8
 server=/fanqiangyakexi.net/8.8.8.8
 server=/farwestchina.com/8.8.8.8
+server=/farxian.com/8.8.8.8
 server=/favorious.com/8.8.8.8
 server=/favstar.fm/8.8.8.8
 server=/faydao.com/8.8.8.8
@@ -565,6 +573,7 @@ server=/islam.org.hk/8.8.8.8
 server=/isohunt.com/8.8.8.8
 server=/itaboo.info/8.8.8.8
 server=/ithelp.ithome.com.tw/8.8.8.8
+server=/itunes.apple.com/8.8.8.8
 server=/itweet.net/8.8.8.8
 server=/iu45.com/8.8.8.8
 server=/izaobao.us/8.8.8.8
@@ -680,10 +689,12 @@ server=/mlcool.com/8.8.8.8
 server=/mmmca.com/8.8.8.8
 server=/mobile01.com/8.8.8.8
 server=/mobypicture.com/8.8.8.8
+server=/moonriver7.files.wordpress.com/8.8.8.8
 server=/mpinews.com/8.8.8.8
 server=/mrtweet.com/8.8.8.8
 server=/msguancha.com/8.8.8.8
 server=/multiupload.com/8.8.8.8
+server=/my.backchina.com/8.8.8.8
 server=/my.opera.com/8.8.8.8
 server=/myav.com.tw/8.8.8.8
 server=/myboooks.googlepages.com/8.8.8.8
@@ -711,6 +722,7 @@ server=/newcenturymc.com/8.8.8.8
 server=/newcenturynews.com/8.8.8.8
 server=/newchen.com/8.8.8.8
 server=/newgrounds.com/8.8.8.8
+server=/news.backchina.com/8.8.8.8
 server=/news.bbc.co.uk/8.8.8.8
 server=/news.chinatimes.com/8.8.8.8
 server=/news.google.com.hk/8.8.8.8
@@ -938,6 +950,7 @@ server=/sitebro.tw/8.8.8.8
 server=/sites.google.com/8.8.8.8
 server=/sitetag.us/8.8.8.8
 server=/siyi123123123.spaces.live.com/8.8.8.8
+server=/slideshare.net/8.8.8.8
 server=/slinkset.com/8.8.8.8
 server=/slutload.com/8.8.8.8
 server=/snaptu.com/8.8.8.8
@@ -961,6 +974,7 @@ server=/squarespace.com/8.8.8.8
 server=/srcf.ucam.org/8.8.8.8
 server=/starp2p.com/8.8.8.8
 server=/state168.com/8.8.8.8
+server=/static.nownews.com/8.8.8.8
 server=/sthoo.com/8.8.8.8
 server=/stickam.com/8.8.8.8
 server=/stickeraction.com/8.8.8.8
@@ -1000,6 +1014,7 @@ server=/technorati.com/8.8.8.8
 server=/telecomspace.com/8.8.8.8
 server=/the-sun.on.cc/8.8.8.8
 server=/theblemish.com/8.8.8.8
+server=/thechinabeat.org/8.8.8.8
 server=/thepiratebay.org/8.8.8.8
 server=/theqii.info/8.8.8.8
 server=/thespeeder.com/8.8.8.8
@@ -1056,6 +1071,7 @@ server=/tuidang.net/8.8.8.8
 server=/tuite.googlecode.com/8.8.8.8
 server=/tuite.im/8.8.8.8
 server=/tuite.in/8.8.8.8
+server=/tunein.com/8.8.8.8
 server=/turbobit.net/8.8.8.8
 server=/tv.com/8.8.8.8
 server=/tvboxnow.com/8.8.8.8
@@ -1130,6 +1146,7 @@ server=/uncyclopedia.info/8.8.8.8
 server=/uni.cc/8.8.8.8
 server=/uniteddaily.com.my/8.8.8.8
 server=/upcoming.yahoo.com/8.8.8.8
+server=/upload.backchina.com/8.8.8.8
 server=/upload4u.info/8.8.8.8
 server=/uploaded.to/8.8.8.8
 server=/uploadstation.com/8.8.8.8
@@ -1233,12 +1250,15 @@ server=/www.dwheeler.com/8.8.8.8
 server=/www.eulam.com/8.8.8.8
 server=/www.forum4hk.com/8.8.8.8
 server=/www.freetibet.org/8.8.8.8
+server=/www.immigration.gov.tw/8.8.8.8
 server=/www.macrovpn.com/8.8.8.8
 server=/www.ned.org/8.8.8.8
+server=/www.nownews.com/8.8.8.8
 server=/www.orchidbbs.com/8.8.8.8
 server=/www.owind.com/8.8.8.8
 server=/www.stackfile.com/8.8.8.8
 server=/www.supertweet.net/8.8.8.8
+server=/www.urbanoutfitters.com/8.8.8.8
 server=/www.voy.com/8.8.8.8
 server=/www.wangruowang.org/8.8.8.8
 server=/www.wet123.com/8.8.8.8
@@ -1280,6 +1300,7 @@ server=/yi.org/8.8.8.8
 server=/yidio.com/8.8.8.8
 server=/yilubbs.com/8.8.8.8
 server=/yipub.com/8.8.8.8
+server=/ym.backchina.com/8.8.8.8
 server=/yogichen.org/8.8.8.8
 server=/yong.hu/8.8.8.8
 server=/youjizz.com/8.8.8.8
